--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "uuid": "^9.0.1"
